# repr

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  conanfile.py  palgen.toml  sonar-project.properties
.github/workflows/: ci.yml  docs.yml  sonarcloud.yml
.vsconan/: config.json
benchmark/compiletime/enum/: names.cpp  profiles.toml
benchmark/enum/: profiles.toml
benchmark/runtime/: CMakeLists.txt  main.cpp
benchmark/runtime/util/: CMakeLists.txt  string_buffer.cpp
cmake/: warnings.cmake
docs/: Doxyfile  DoxygenLayout.xml  benchmarks.md  example.dox  github-corner.css  godbolt.js  layout.xml  patch_dot.py
docs/ci/: benchmark.md  test.md
docs/hooks/: dot
docs/static/: charts.js  doxygen-awesome-alerts.js  doxygen-awesome-godbolt.js  godbolt.js
docs/tags/: cppreference-doxygen-web.tag.xml
docs/templates/: _header.html  footer.html  header.html  style.css
examples/: simple.cpp
include/: repr  repr.h
include/detail/: fundamental.h  iterable.h  pointer.h  typename.h  visibility.h
include/librepr/: customization.h  demangle.h  feature.h  literal.h  object_info.h  options.h  repr.h  terminal.h  type_info.h  typename.h  visit.h  visitor.h
include/librepr/ctvi/: ctvi.h
include/librepr/customization/: enum.h  members.h  reflection.h
include/librepr/detail/: concepts.h  default.h  format.h  macros.h  overload.h  platform.h  type_list.h  visibility.h  warning.h
include/librepr/enum/: accessor.h  range.h  range_list.h  reflect.h  search.h  util.h
include/librepr/enum/detail/: layout.h  range.h  search.h  util.h
include/librepr/macro/: assert.h  default.h  format.h  platform.h  util.h  warning.h
include/librepr/name/: ctti.h  demangle.h  member.h  rtti.h  type.h
include/librepr/name/detail/: denoise.h  undecorate.h  undname.h
include/librepr/parsing/: classify.h  constants.h  keyword.h  keywords.gperf  keywords.h  lex.h  lex_error.h  lex_error.h.in  token.h  token_kind.h
include/librepr/parsing/token/: generic.h  keywords.gperf  keywords.h  lex_error.h  lex_error.h.in  name.h  numeral.h  punctuation.h  string.h
include/librepr/reflection/: aggregate.h  arity.h  array.h  category.h  custom.h  enum.h  init_list.h  name.h  pair.h  pointer.h  reflect.h  to_tuple.h  variant.h  visitor.h
include/librepr/reflection/detail/: arity.h  to_reftuple.h  to_tuple.h  to_tuple.h.in  visit_aggregate.h  visit_aggregate.h.in
include/librepr/repr/: aggregate.h  all.h  ctvi.h  enum.h  fallback.h  fundamental.h  initializer_list.h  iterable.h  pair.h  pointer.h  repr.h  repr_method.h
include/librepr/type/: ctti.h  demangle.h  member_names.h  name.h  rtti.h
include/librepr/type/detail/: denoise.h  undecorate.h  undname.h
include/librepr/util/: concepts.h  enum.h  fake_obj.h  hash.h  list.h  member_ptr.h  overload.h  pack.h  pack_generated.h.in  reftuple.h  string.h  string_buffer.h  strings.h  type_list.h  union.h  util.h  wrap.h
include/librepr/util/collections/: list.h  pack.h  pack_generated.h  reftuple.h  tuple.h
include/librepr/util/string/: buffer.h  const_string.h  meta.h  printer.h  util.h
include/librepr/visitors/: cpp.h  layout.h  python.h  repr.h  visitor.h
src/: CMakeLists.txt  demangle.linux.cpp  demangle.windows.cpp  fundamental.cpp  options.cpp  pointer.cpp  repr.cpp
src/detail/: CMakeLists.txt  fundamental.cpp  pointer.cpp
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  demangle.cpp  terminal.cpp
src/platform/windows/: demangle.cpp  terminal.cpp
src/repr/: CMakeLists.txt  fundamental.cpp  pointer.cpp
src/visitors/: CMakeLists.txt  repr.cpp
test/: CMakeLists.txt  fundamental.cpp  iterable.cpp  main.cpp  object_info.cpp  pointer.cpp
test/ctvi/: ctvi.cpp
test/detail/: CMakeLists.txt  type_list.cpp
test/diagnostics/: eval.h  settings.em  union.cpp
test/diagnostics/ctei/: enum_conversion.cpp
test/enum/: CMakeLists.txt  range.cpp  range_list.cpp  rangify.cpp  reflect.cpp  search.cpp  search_range.cpp  test_enums.h  util.cpp
test/layout/: CMakeLists.txt  aggregate.cpp  enum.cpp  fallback.cpp  fundamental.cpp  initializer_list.cpp  pair.cpp  pointer.cpp
test/name/: CMakeLists.txt  demangle.cpp  member_names.cpp
test/parsing/: CMakeLists.txt  lexer.cpp  token.cpp
test/reflection/: arity.cpp
test/repr/: CMakeLists.txt  aggregate.cpp  customization.cpp  enum.cpp  fallback.cpp  fundamental.cpp  initializer_list.cpp  iterable.cpp  pair.cpp  pointer.cpp  variant.cpp
test/unittest/: CMakeLists.txt
test/unittest/ctvi/: CMakeLists.txt
test/unittest/enum/: CMakeLists.txt  rangify.cpp  test_enums.h
test/unittest/layout/: CMakeLists.txt  aggregate.cpp  enum.cpp  fundamental.cpp
test/unittest/name/: CMakeLists.txt
test/unittest/reflection/: CMakeLists.txt
test/unittest/repr/: CMakeLists.txt  initializer_list.cpp  pointer.cpp
test/unittest/util/: CMakeLists.txt  printer.cpp  reftuple.cpp  tuple.cpp  type_list.cpp
test/unittest/visitors/: CMakeLists.txt
test/util/: CMakeLists.txt  type_list.cpp
test/visitors/: repr.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tools/: amalgamate.py  benchmark.py  codegen.py  diagnostics.py  docs.py  gperf.py  graphs.py  pyproject.toml  requirements.txt
